# eidas-testenv

./: .gitignore  CLAUDE.md  Cargo.toml  MANUAL-TESTING.md  README.md  ROADMAP.md  docker-compose.yml
crates/ca/: Cargo.toml
crates/ca/src/: bootstrap.rs  list.rs  main.rs  storage.rs
crates/portal/: Cargo.toml
crates/portal/assets/: index.html
crates/portal/src/: main.rs  serve.rs  sign.rs
crates/tl/: Cargo.toml
crates/tl/src/: bootstrap.rs  main.rs  tsl.rs
crates/verifier/: Cargo.toml
crates/verifier/src/: main.rs
crates/wallet/: Cargo.toml
crates/wallet/assets/: index.html
crates/wallet/src/: holder_key.rs  issue.rs  main.rs  present.rs  sd_jwt.rs  serve.rs  storage.rs
docker/ocsp/: README.md
docker/tsa/: README.md
