[package]
name = "wallet"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "CLI wallet exercising OID4VCI/OID4VP against the official EUDIW issuer/verifier reference services"

[dependencies]
openid4vp = { git = "https://github.com/spruceid/openid4vp" }
# Holder-side OID4VCI: SpruceID also publishes an equivalent crate for the
# issuance side, used here instead of hand-rolling the protocol. The
# "reqwest" feature pulls in its own vendored `reqwest` (re-exported as
# `oid4vci::open_auth2::reqwest`) that implements the HttpClient trait the
# crate's client methods require.
oid4vci = { git = "https://github.com/spruceid/oid4vci-rs", features = ["reqwest"] }
# Holder key representation shared with both `oid4vci` and `openid4vp`
# (both pin the same version), so a single JWK works for issuance proofs
# and, later, presentation key-binding.
ssi = { version = "0.16", features = ["secp256r1"] }

reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }

clap = { version = "4", features = ["derive"] }
# Required to implement openid4vp's `Wallet`/`RequestVerifier` traits (they
# predate native async fn in traits), same version openid4vp itself uses.
async-trait = "0.1"
# `openid4vp::wallet::Wallet::validate_request` takes a `url::Url`.
url = "2"

sha2 = "0.10"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Encoding the pre-authorized_code token request body: oid4vci's re-exported
# reqwest (0.13, via open-auth2) doesn't enable its own "form" feature, and
# we can't turn it on from here since we don't depend on reqwest 0.13
# directly — so the request body is built by hand instead.
serde_urlencoded = "0.7"

anyhow = "1"
# openid4vp's own reqwest dependency doesn't disable reqwest's default
# features, so native-tls (and its openssl-sys build) is pulled in
# regardless of our own reqwest feature choice below. This box has no
# pkg-config/libssl-dev and no root access, so force openssl-sys to build
# OpenSSL from source instead of looking for a system install.
openssl = { version = "0.10", features = ["vendored"] }
# Cross-platform home dir resolution for ~/.eidas-testenv (resolves to
# $HOME on Linux/macOS, matching the path the spec names).
directories = "5"
uuid = { version = "1", features = ["v4"] }
time = { version = "0.3", features = ["formatting"] }

# Local browser UI (`wallet serve`, paste-a-QR workflow). Trimmed to the
# minimal feature set actually used: no tower-http/tracing/form/query.
axum = { version = "0.8", default-features = false, features = ["http1", "json", "tokio"] }
# Decodes clipboard-pasted/dropped QR screenshots (PNG, occasionally JPEG)
# into a pixel buffer for `rqrr` below. Pinned to an exact version: 0.25.7+
# requires rustc 1.85, but this workspace's rust-version is 1.80.
image = { version = "=0.25.6", default-features = false, features = [
    "png",
    "jpeg",
] }
# Pure-Rust QR grid detector/decoder (its default "img" feature bridges to
# the `image` crate's ImageBuffer<Luma<u8>, _> above) — avoids vendoring a
# JS-side QR decoder for the "paste a QR screenshot" workflow.
rqrr = "0.10"
